--- a/Renewal.Service/Renewal.Service.csproj
+++ b/Renewal.Service/Renewal.Service.csproj
@@ -13,4 +13,12 @@
     <Folder Include="Mappings\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Renewal.DataHub\Renewal.DataHub.csproj" />
+  </ItemGroup>
+
 </Project>
