--- a/Renewal.API/Properties/launchSettings.json
+++ b/Renewal.API/Properties/launchSettings.json
@@ -19,7 +19,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Renewal": {
+    "Renewal.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
