--- a/Renewal.API/appsettings.json
+++ b/Renewal.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=Renewal;User Id=sa;Password=SqlP@ss2025;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
