--- a/Renewal.API/appsettings.json
+++ b/Renewal.API/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SampleConnectionString": "Server=RAGA\\SQLEXPRESS;Database=RenewalDb;Trusted_Connection=True;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*"
 }
